gcc/testsuite/gdc.test/compilable/dtoh_AliasDeclaration_98.d
/*
REQUIRED_ARGS: -HC=verbose -extern-std=c++98 -o-
TEST_OUTPUT:
---
// Automatically generated by Digital Mars D Compiler v$n$

#pragma once

#include <assert.h>
#include <math.h>
#include <stddef.h>
#include <stdint.h>

template <typename T, typename U>
struct TS final
{
    TS()
    {
    }
};

// Ignored dtoh_AliasDeclaration_98.TSD because `using` declarations require C++ 11
---
*/

extern(C++):

struct TS(T, U) {}
alias TSD = TS;
